# rust-todo-app

./: Cargo.toml  LICENSE  Makefile  README.md  build.rs
src/: main.rs
src/app/: mod.rs
src/app/todo_mgmt/: mod.rs  model.rs  port.rs
src/app/todo_mgmt/adapter/inbound/http/: mod.rs  model.rs
src/app/todo_mgmt/adapter/outbound/: mod.rs
src/app/todo_mgmt/adapter/outbound/pg/: cornucopia.rs  mod.rs  schema.sql
src/app/todo_mgmt/adapter/outbound/pg/query/: for_reading_todos.sql  for_writing_todos.sql
src/shared/: error.rs
